Software/QuickUsbPwmEncode/QuickUSB.bas

Attribute VB_Name = "QuickUSB"
'=============================================================================
' Title        : QuickUSB.bas
' Description  : QuickUSB Library Function Declarations
' Copyright    : Copyright (c) 2002 Bitwise Systems
' Notes        : Add this file to your project in order to use the QuickUSB
'                library.
' History      :
'   Date       Name        Description
'  5/5/2002   bhenry      Initial coding
'
' Copyright © 2002 Bitwise Systems, Inc.  All rights reserved.
' This software contains confidential information and trade secrets of
' Bitwise Systems and is protected by United States and international
' copyright laws.  Use, disclosure, or reproduction is prohibited without
' the prior express written permission of Bitwise Systems, except as agreed
' in the QuickUSB Plug-In Module license agreement.
'
' Use, duplication or disclosure by the U.S. Government is subject to
' restrictions as provided in DFARS 227.7202-1(a) and 227.7202-3(a)
' (1998), and FAR 12.212, as applicable.  Bitwise Systems, 697 Via Miguel
' Santa Barbara, CA  93111.
'
' Bitwise Systems
' 697 Via Miguel
' Santa Barbara, CA  93111
' Voice: (805) 683-6469
' Fax  : (805) 683-6469
' Web  : www.bitwisesys.com
' email: support@bitwisesys.com
'
' $History: QuickUSB.bas $
' 
' *****************  Version 1  *****************
' User: Blake Henry  Date: 1/20/04    Time: 2:32p
' Created in $/Projects/Bitwise/QuickUSB/Software/QuickUsbPwmEncode
' Initial Check-in
'
' *****************  Version 1  *****************
' User: Blake Henry  Date: 8/08/03    Time: 6:36p
' Created in $/Projects/Bitwise/QuickUSB/Software/QuickUsbPwmDecoder
' Initial checkin
'
' *****************  Version 5  *****************
' User: Blake Henry  Date: 8/07/03    Time: 7:12p
' Updated in $/Projects/Bitwise/QuickUSB/Software/QuickUsbDiag
' Added timer support
'
' *****************  Version 4  *****************
' User: Blake Henry  Date: 6/24/03    Time: 11:51a
' Updated in $/Projects/Ultralink/Usb796/Software
' Added Align function to align data to a certain blocksize
'
' *****************  Version 3  *****************
' User: Blake Henry  Date: 6/20/03    Time: 7:38p
' Updated in $/Projects/Ultralink/Usb796/Software
' Massive changes
'
'=============================================================================
Option Explicit


'=============================================================================
' Variables
'=============================================================================
Dim devName As String


'=============================================================================
' Win32 Library functions useful for VB apps
'=============================================================================
Declare Sub Sleep Lib "Kernel32" (ByVal dwMilliseconds As Long)
Declare Sub CopyMemory Lib "Kernel32" Alias "RtlMoveMemory" (lpvDest As Any, lpvSource As Any, ByVal cbCopy As Long)


'=============================================================================
' General purpose routines
'=============================================================================
Declare Function QuickUsbFindModules Lib "QuickUsb" _
   (ByVal nameList As String, ByVal length As Long) As Long
Declare Function QuickUsbOpen Lib "QuickUsb" _
   (ByRef hDevice As Long, ByVal devName As String) As Long
Declare Function QuickUsbClose Lib "QuickUsb" (ByVal hDevice As Long) As Long
Declare Function QuickUsbGetStringDescriptor Lib "QuickUsb" _
   (ByVal hDevice As Long, ByVal Index As Byte, _
    ByVal theString As String, ByVal length As Integer) As Long


'=============================================================================
' FPGA Configuration Functions
'=============================================================================
Declare Function QuickUsbStartFpgaConfiguration Lib "QuickUsb" _
   (ByVal hDevice As Long) As Long
Declare Function QuickUsbWriteFpgaData Lib "QuickUsb" _
   (ByVal hDevice As Long, Data As Any, ByVal length As Long) As Long
Declare Function QuickUsbIsFpgaConfigured Lib "QuickUsb" _
   (ByVal hDevice As Long, ByRef isConfigured As Integer) As Long


'=============================================================================
' QuickUSB Setting Functions
'=============================================================================
Global Const SETTING_WORDWIDE = 1
' WORDWIDE is the address of the WORDWIDE QuickUSB setting.
' If the value of WORDWIDE is 1, high-speed parallel port transfers are
' one WORD (16-bits) wide.  If 0, the transfers are one BYTE (8-bits) wide.
' This setting affects the address bus as well since it will increment once
' per value.  If the value of WORDWIDE is 0, the upper 8 bits of the FD bus
' will be left unprogrammed so they may be used for other functions.

Global Const SETTING_DATAADDRESS = 2
' WORDWIDE is the address of the WORDWIDE QuickUSB setting.
' If the value of WORDWIDE is 1, high-speed parallel port transfers are
' one WORD (16-bits) wide.  If 0, the transfers are one BYTE (8-bits) wide.
' This setting affects the address bus as well since it will increment once
' per value.  If the value of WORDWIDE is 0, the upper 8 bits of the FD bus
' will be left unprogrammed so they may be used for other functions.

Global Const SETTING_FIFOCONFIG = 3
' Controls the FX2 IFCONFIG register.  Sets the external FIFO mode,
' clock speeds, output enables, IFCLK polarity and others.

Global Const SETTING_FPGATYPE = 4

Global Const SETTING_CPUCONFIG = 5

Global Const FIFOCONFIG_GPIF = &HFA
Global Const FIFOCONFIG_SLAVE = &H3

'=============================================================================
' Timer Constants
'=============================================================================
' Timer Registers
Global Const TIMER_REG_TCON = 0
Global Const TIMER_REG_TMOD = 1
Global Const TIMER_REG_T0 = 2
Global Const TIMER_REG_T1 = 3
Global Const TIMER_REG_CKCON = 4
Global Const TIMER_REG_IE = 5
Global Const TIMER_REG_T2CON = 6
Global Const TIMER_REG_RCAP2 = 7
Global Const TIMER_REG_T2 = 8
Global Const TIMER_REG_PORTACFG = 9
Global Const TIMER_REG_PORTECFG = 10
Global Const TIMER_REG_PWM0LOW = 11
Global Const TIMER_REG_PWM0HIGH = 12
Global Const TIMER_REG_PWM1LOW = 13
Global Const TIMER_REG_PWM1HIGH = 14


' Timer ISR registers (all these guys are read at the same time in an ISR)
Global Const TIMER_ISRREG_T0 = 0
Global Const TIMER_ISRREG_T1 = 1
Global Const TIMER_ISRREG_RCAP2 = 2
Global Const TIMER_ISRREG_T2 = 3


Declare Function QuickUsbReadSetting Lib "QuickUsb" _
   (ByVal hDevice As Long, ByVal settingNum As Integer, _
   ByRef theValue As Integer) As Long
Declare Function QuickUsbWriteSetting Lib "QuickUsb" _
   (ByVal hDevice As Long, ByVal settingNum As Integer, _
   ByVal theValue As Integer) As Long


'=============================================================================
' QuickUSB High-Speed Parallel (HS) Port Functions
'=============================================================================
Declare Function QuickUsbReadCommand Lib "QuickUsb" _
   (ByVal hDevice As Long, ByVal address As Integer, _
   Data As Any, ByRef length As Integer) As Long
Declare Function QuickUsbWriteCommand Lib "QuickUsb" _
   (ByVal hDevice As Long, ByVal address As Integer, _
   Data As Any, ByVal length As Integer) As Long
Declare Function QuickUsbReadData Lib "QuickUsb" _
   (ByVal hDevice As Long, Data As Any, ByRef length As Long) As Long
Declare Function QuickUsbWriteData Lib "QuickUsb" _
   (ByVal hDevice As Long, Data As Any, ByVal length As Long) As Long
Declare Function QuickUsbReadDataString Lib "QuickUsb" Alias "QuickUsbReadData" _
   (ByVal hDevice As Long, ByVal str As String, ByRef length As Long) As Long
Declare Function QuickUsbWriteDataString Lib "QuickUsb" Alias "QuickUsbWriteData" _
   (ByVal hDevice As Long, ByVal str As String, ByVal length As Long) As Long


'=============================================================================
' QuickUSB General Purpose Port Functions
'=============================================================================
Declare Function QuickUsbReadPortDir Lib "QuickUsb" _
   (ByVal hDevice As Long, ByVal address As Integer, _
   ByRef Data As Byte) As Long
Declare Function QuickUsbWritePortDir Lib "QuickUsb" _
   (ByVal hDevice As Long, ByVal address As Integer, _
   ByVal Data As Byte) As Long
Declare Function QuickUsbReadPort Lib "QuickUsb" _
   (ByVal hDevice As Long, ByVal address As Integer, _
   Data As Any, ByRef length As Integer) As Long
Declare Function QuickUsbWritePort Lib "QuickUsb" _
   (ByVal hDevice As Long, ByVal address As Integer, _
   Data As Any, ByVal length As Integer) As Long


'=============================================================================
' QuickUSB RS-232 Port Functions
'=============================================================================
Declare Function QuickUsbSetRS232BaudRate Lib "QuickUsb" _
   (ByVal hDevice As Long, ByVal baudRate As Long) As Long
Declare Function QuickUsbGetNumRS232 Lib "QuickUsb" _
   (ByVal hDevice As Long, ByVal portNum As Byte, ByRef length As Integer) As Long
Declare Function QuickUsbFlushRS232 Lib "QuickUsb" _
   (ByVal hDevice As Long, ByVal portNum As Byte) As Long
Declare Function QuickUsbReadRS232 Lib "QuickUsb" _
   (ByVal hDevice As Long, ByVal portNum As Byte, _
   Data As Any, ByRef length As Integer) As Long
Declare Function QuickUsbWriteRS232 Lib "QuickUsb" _
   (ByVal hDevice As Long, ByVal portNum As Byte, _
   Data As Any, ByVal length As Integer) As Long
Declare Function QuickUsbReadRS232String Lib "QuickUsb" Alias "QuickUsbReadRS232" _
   (ByVal hDevice As Long, ByVal portNum As Byte, _
   ByVal str As String, ByRef length As Integer) As Long
'-----------------------------------------------------------------------------
' Name    : QuickUsbReadRS232String
' Purpose : Read a string from the RS232 receive buffer.
' Params  :
'  hDevice - A HANDLE to an open QuickUSB module.
'  portNum - 0 or 1 for ports 0 and 1 respectively.
'  data - A 'filled' string in which to place the received data
'  length - The length of the passed 'filled' string
' Results : Returns a non-zero number on success, 0 otherwise.
' Notes   : The maximum size of the receive buffer is 16 bytes.  If the
'   buffer does not contain the number of characters requested, the routine
'   will wait until the characters become available.
'-----------------------------------------------------------------------------
Declare Function QuickUsbWriteRS232String Lib "QuickUsb" Alias "QuickUsbWriteRS232" _
   (ByVal hDevice As Long, ByVal portNum As Byte, _
   ByVal str As String, ByVal length As Integer) As Long
'-----------------------------------------------------------------------------
' Name    : QuickUsbWriteRS232String
' Purpose : Write a string to the RS232 transmit buffer.
' Params  :
'  hDevice - A HANDLE to an open QuickUSB module.
'  portNum - 0 or 1 for ports 0 and 1 respectively.
'  data - A byte array which contains the data to send
'  length - The length of the passed byte array
' Results : Returns a non-zero number on success, 0 otherwise.
' Notes   : The maximum size of the transmit buffer is 16 bytes.  If more
'  than 16 bytes are sent, the routine will wait until the last of the bytes
'  can be placed into the buffer.
'-----------------------------------------------------------------------------

